Bug 177552 - KColorButton Ignores Default Colour Choice
Summary: KColorButton Ignores Default Colour Choice
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-12 01:06 UTC by Keith Rusler
Modified: 2009-07-03 00:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Rusler 2008-12-12 01:06:45 UTC
Version:            (using Devel)
Compiler:          GCC 4.3.2 
OS:                Linux
Installed from:    Compiled sources

Create a new QWidget in Qt Designer. Drag a KColorButton on to it. Set the color property to any colour. Then set the default color to the same color as previously did. And run the ui and select the button and change the colour and click use default checkbox and hit okay. The colour on the button goes back to invalid. And the default colour should actually be 0, 0, 0, 0 not 0, 0, 0, 255. Because that is black. And you have to change another dig in either red, blue or green to get it to display black.
Comment 1 Christoph Feck 2009-07-03 00:49:29 UTC
SVN commit 990663 by cfeck:

Show correct color even when "default" was selected

BUG: 177552


 M  +4 -1      kcolorbutton.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=990663
Comment 2 Christoph Feck 2009-07-03 00:54:49 UTC
Keith, there is no "default" for the default value in KDE code. If you get a default color of 0,0,0,255 instead of 0,0,0,0 then this is done inside Designer.
Comment 3 Christoph Feck 2009-07-03 00:56:43 UTC
SVN commit 990671 by cfeck:

Show correct color even when "default" was selected (backport r990663)

CCBUG: 177552


 M  +4 -1      kcolorbutton.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=990671