Show correct color even when "default" was selected

BUG: 177552

svn path=/trunk/KDE/kdelibs/; revision=990663